# webrtc-fastapi-react-test

./: README.md  asset-manifest.json  index.html
backend/: pyproject.toml  server.py  start_server.sh
frontend/aiortc_test/: package-lock.json  package.json
frontend/aiortc_test/src/: App.tsx  AudioElement.tsx  MockCanvas.tsx  VideoElement.tsx  index.tsx
static/js/: 787.f1760a34.chunk.js  787.f1760a34.chunk.js.map  main.74e45550.js  main.74e45550.js.map  main.bc520a04.js  main.bc520a04.js.map
